--- a/driver.ipynb
+++ b/driver.ipynb
@@ -379,20 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('./train_data.csv')"
+    "train_data = pd.read_csv('./random_samples/train_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "car_data = pd.read_csv('./car_data.csv')"
+    "car_data = pd.read_csv('./random_samples/car_data.csv')"
    ]
   },
   {
